tests/fail/stacked_borrows/issue-miri-1050-2.rs
// error-pattern: is not a valid pointer
use std::ptr::NonNull;

fn main() {
    unsafe {
        let ptr = NonNull::<i32>::dangling();
        Box::from_raw(ptr.as_ptr());
    }
}
